# solvis

./: .gitignore  LICENSE  README.md  conda-lock.yml  environment.yml  main.py  meson.build  pyproject.toml  run_formatter.sh  tasks.py
.github/workflows/: ci.yml
examples/hydrogen_bond_complex_example/: hbond.py
examples/hydrogen_bond_complex_example/input/: non_oct_with_Cl.data
examples/hydrogen_bond_with_labels/: hbond.py
examples/render_capped_trigonal_prism/: calc_sph.py  calc_sph_clean.py  render_ctp.py  test.py  vanilla_script.py
examples/render_hydrogen_bonds_octahedral/: octahedral.py
examples/render_hydrogen_bonds_octahedral/input/: system-64.data
examples/render_solvation_center/: render_solvation_center.py
examples/single_sphericity_calc/: calc_sph.py
examples/sphericity_calc_traj/: calc_sph_multiple.py
resources/: octahedral_solvation_shell.lammpstrj  single_capped_trigonal_prism.lammpstrj  single_capped_trigonal_prism_unwrapped.lammpstrj  single_hbond.lammpstrj  single_octahedron.lammpstrj  solution_box.lammpstrj  system_oct_hbonds.data  system_oct_hbonds.lammpstrj
solvis/: __init__.py  atom_tag_manager.py  bond_helper.py  geometric_utils.py  render_helper.py  solvation_shell.py  system.py  util.py  vis_initializers.py  visualization.py
tests/: test_convex_hull.py  test_expanded_box.py  test_hydrogen_bonds.py  test_plot_octahedral_shell.py  test_plotter.py  test_renderer_representation.py  test_solvation_shell.py  test_sphericity.py  test_system.py
