[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "solvis"
authors = [{name = "Amrita Goswami", email = "amrita@hi.is"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "ase == 3.22.1",
    "numpy == 1.22.4",
    "scipy == 1.7.3",
    "pyvista == 0.43.0",
    "pillow == 10.0.1",
    "imageio == 2.31.5",
    "pooch==1.8.0",
    "scooby==0.9.2"
]

[project.urls]
Home = "https://english.hi.is/staff/amrita"

[project.scripts]
solvis = "solvis:app"

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "coverage==6.1.1",
    "pytest-cov==3.0.0",
]
dev = [
    "flake8==3.9.2",
    "mypy==0.910",
    "black==22.3.0",
    "isort==5.9.3",
    "autoflake==1.4",
    "flake8-docstrings==1.6.0",
]
examples = [
    "pandas"
]

[tool.isort]
profile = "black"